--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1>Filmes</h1>
             </a>
 
-            <nav class="titulo Red">
+            <nav style="display: none;" class="titulo Red">
                 <a href="Movies/Red/Red.html">
                     <img class="Capa Red" src="Images/Red.jpg" />
                     <ul class="info">
