--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
                 </a>
             </nav>
 
+            <nav class="titulo Red2">
+                <a href="Movies/Red/Red2.html">
+                    <img class="Capa Red" src="Images/Red2.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Red</strong></li>
+                        <li class="topic-Subtitle">Aposentados e Ainda Mais Perigosos</li>
+                        <li class="topic">Duração: </li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
             <nav class="titulo Rei-Arthur">
                 <a href="Movies/Rei-Arthur.html">
                     <img class="Capa Rei-Arthur" src="Images/Rei-Arthur.jpg" />
