--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
                 <h1>Filmes</h1>
             </a>
 
+            <nav style="display: none;" class="titulo Minha-mae-e-uma-peça">
+                <a href="Movies/Minha mae e uma peça/Minha-mae-e-uma-peça.html">
+                    <img class="Capa Minha-mae-e-uma-peça" src="Images/Minha-mae-e-uma-peça.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Minha mãe é uma peça</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: </li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Guerra-mundial-Z">
+                <a href="Movies/Guerra-mundial-Z.html">
+                    <img class="Capa Guerra-mundial-Z" src="Images/GMZ.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Guerra mundial Z</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 2h 03min 03s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
             <nav class="titulo Red">
                 <a href="Movies/Red/Red.html">
                     <img class="Capa Red" src="Images/Red.jpg" />
@@ -48,11 +72,11 @@
 
             <nav class="titulo Red2">
                 <a href="Movies/Red/Red2.html">
-                    <img class="Capa Red" src="Images/Red2.jpg" />
+                    <img class="Capa Red2" src="Images/Red2.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Red</strong></li>
+                        <li class="topic-Title"><strong>Red 2</strong></li>
                         <li class="topic-Subtitle">Aposentados e Ainda Mais Perigosos</li>
-                        <li class="topic">Duração: </li>
+                        <li class="topic">Duração: 1h 55min 49s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
