--- a/Movies/Red/Red.html
+++ b/Movies/Red/Red.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
     <meta charset="utf-8" />
     <script src="../../Scripts/Btn.js"></script>
@@ -35,13 +35,13 @@
             frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
 
-    <div class="sequencia1" style="display: none;">
-        <nav class="titulo Homem-aranha-longe-de-casa">
-            <a href="Homem-aranha-longe-de-casa.html">
-                <img class="Capa Homem-aranha-longe-de-casa" src="../../Images/homem aranha longe de casa.jpg" />
+    <div class="sequencia1">
+        <nav class="titulo Red2">
+            <a href="Red2.html">
+                <img class="Capa Red2" src="../../Images/Red2.jpg" />
                 <ul class="info">
-                    <li class="topic-Title"><strong>Homem Aranha</strong></li>
-                    <li class="topic-Subtitle">longe de casa</li>
+                    <li class="topic-Title"><strong>Red</strong></li>
+                    <li class="topic-Subtitle">Aposentados e Ainda Mais Perigosos</li>
                     <li class="topic">Duração: 2h 09min 23s</li>
                     <li class="topic">Dublado</li>
                 </ul>
