--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
             </nav>
 
-            <nav style="display: none;" class="titulo Guerra-mundial-Z">
+            <nav none;" class="titulo Guerra-mundial-Z">
                 <a href="Movies/Guerra-mundial-Z.html">
                     <img class="Capa Guerra-mundial-Z" src="Images/GMZ.jpg" />
                     <ul class="info">
