--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 </a>
             </nav>
 
-            <nav class="titulo Indiana-Jones-e-a-ultima-cruzada">
+            <nav style="display: none;" class="titulo Indiana-Jones-e-a-ultima-cruzada">
                 <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html">
                     <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="Images/Indiana Jones e a ultima cruzada.jpg" />
                     <ul class="info">
