--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <h1>Filmes</h1>
             </a>
 
-            <nav style="display: none;" class="titulo Minha-mae-e-uma-peça">
-                <a href="Movies/Minha mae e uma peça/Minha-mae-e-uma-peça.html">
-                    <img class="Capa Minha-mae-e-uma-peça" src="Images/Minha-mae-e-uma-peça.jpg" />
+            <!--<nav class="titulo Minha-mae-e-uma-peça-2">
+                <a href="Movies/Minha mae e uma peça/Minha-mae-e-uma-peça-2.html">
+                    <img class="Capa Minha-mae-e-uma-peça" src="Images/Minha-mae-e-uma-peça-2.jpg" />
                     <ul class="info">
                         <li class="topic-Title"><strong>Minha mãe é uma peça</strong></li>
                         <li class="topic-Subtitle"></li>
@@ -44,9 +44,21 @@
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
+            </nav>-->
+
+            <nav class="titulo Jogador-n1">
+                <a href="Movies/Jogador-n1.html">
+                    <img class="Capa Jogador-n1" src="Images/Jogador-n1.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Jogadaor número 1</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 2h 19min 55s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
             </nav>
 
-            <nav class="titulo Guerra-mundial-Z">
+            <nav style="display: none;" class="titulo Guerra-mundial-Z">
                 <a href="Movies/Guerra-mundial-Z.html">
                     <img class="Capa Guerra-mundial-Z" src="Images/GMZ.jpg" />
                     <ul class="info">
@@ -240,7 +252,7 @@
                 </a>
             </nav>
 
-            <nav style="display: none;" class="titulo Indiana-Jones-e-a-ultima-cruzada">
+            <nav class="titulo Indiana-Jones-e-a-ultima-cruzada">
                 <a href="Movies/Indiana Jones/Indiana-Jones-e-a-ultima-cruzada.html">
                     <img class="Capa Indiana-Jones-e-a-ultima-cruzada" src="Images/Indiana Jones e a ultima cruzada.jpg" />
                     <ul class="info">
