--- a/Movies/Jogador-n1.html
+++ b/Movies/Jogador-n1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../Styles/moviePg.css" />
     <link rel="stylesheet" href="../Styles/menu.css"/>
 
-    <title>Jogaor número 1</title>
+    <title>Jogador número 1</title>
 </head>
 <body>
 
