--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
             </nav>-->
 
-            <nav class="titulo Operaçao-Overloed">
+            <!--<nav class="titulo Operaçao-Overloed">
                 <a href="Movies/Operaçao-Overloed.html">
                     <img class="Capa Operaçao-Overloed" src="Images/Operacao Overloed.jpg" />
                     <ul class="info">
@@ -56,7 +56,7 @@
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
-            </nav>
+            </nav>-->
 
             <nav class="titulo Jogador-n1">
                 <a href="Movies/Jogador-n1.html">
