--- a/index.html
+++ b/index.html
@@ -46,17 +46,53 @@
                 </a>
             </nav>-->
 
-            <!--<nav class="titulo Operaçao-Overloed">
-                <a href="Movies/Operaçao-Overloed.html">
-                    <img class="Capa Operaçao-Overloed" src="Images/Operacao Overloed.jpg" />
+            <nav class="titulo Anjos-da-lei">
+                <a href="Movies/Anjos da lei/Anjos-da-lei.html">
+                    <img class="Capa Anjos-da-lei" src="Images/Anjos da lei.jpg" />
                     <ul class="info">
-                        <li class="topic-Title"><strong>Operaçao Overloed</strong></li>
+                        <li class="topic-Title"><strong>Anjos da lei</strong></li>
                         <li class="topic-Subtitle"></li>
-                        <li class="topic">Duração: 1h 49min 47s</li>
+                        <li class="topic">Duração: 1h 49min 37s</li>
                         <li class="topic">Dublado</li>
                     </ul>
                 </a>
-            </nav>-->
+            </nav>
+
+            <nav class="titulo Anjos-da-lei-2">
+                <a href="Movies/Anjos da lei/Anjos-da-lei-2.html">
+                    <img class="Capa Anjos-da-lei-2" src="Images/Anjos da lei 2.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Anjos da lei 2</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 1h 51min 57s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Homem-aranha-no-aranhaverso">
+                <a href="Movies/Homem aranha/Homem-aranha-no-aranhaverso.html">
+                    <img class="Capa Homem-aranha-no-aranhaverso" src="Images/Aranhaverso.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Homem Aranha</strong></li>
+                        <li class="topic-Subtitle">no Aranhaverso</li>
+                        <li class="topic">Duração: 1h 57min 00s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
+            <nav class="titulo Robos">
+                <a href="Movies/Robos.html">
+                    <img class="Capa Robos" src="Images/Robos.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Robôs</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 1h 29min 48s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
 
             <nav class="titulo Jogador-n1">
                 <a href="Movies/Jogador-n1.html">
