--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
                     </ul>
                 </a>
             </nav>-->
+            <nav class="titulo Quebrando-a-banca">
+                <a href="Movies/Quebrando-a-banca.html">
+                    <img class="Capa Quebrando-a-banca" src="Images/Quebrando a banca.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Quebrando a banca</strong></li>
+                        <li class="topic-Subtitle"></li>
+                        <li class="topic">Duração: 2h 02min 35s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
 
             <nav class="titulo Anjos-da-lei">
                 <a href="Movies/Anjos da lei/Anjos-da-lei.html">
