--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
                     </ul>
                 </a>
             </nav>-->
+             <nav class="titulo Super-heroi-o-filme">
+                <a href="Movies/Super-heroi-o-filme.html">
+                    <img class="Capa Super-heroi-o-filme" src="Images/Super herói o filme.jpg" />
+                    <ul class="info">
+                        <li class="topic-Title"><strong>Super herói</strong></li>
+                        <li class="topic-Subtitle">O filme</li>
+                        <li class="topic">Duração: 1h 22min 22s</li>
+                        <li class="topic">Dublado</li>
+                    </ul>
+                </a>
+            </nav>
+
             <nav class="titulo Invasores">
                 <a href="Movies/Invasores.html">
                     <img class="Capa Invasores" src="Images/Invasores.jpg" />
