--- a/Movies/Super-heroi-o-filme.html
+++ b/Movies/Super-heroi-o-filme.html
@@ -29,7 +29,7 @@
     </header>
 
     <h1 class="Title">Super herói</h1>
-    <h2 class="Sub Title">o filme</h2>
+    <h2 class="Sub Title">O filme</h2>
 
     <iframe src="https://drive.google.com/file/d/1FmwPXizNYqkjn3nHRoK1z0s7qTLC39I2/preview?"
          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
