--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Home - Watchers</title>
     </head>
 
-    <body>
+    <body onload="redirect()">
         <header>
             <nav>
                 <ul id="Btn" class="Menu Menu_bar close">
@@ -497,6 +497,6 @@
                 </a>
             </nav>
         </div><!--Fim das series-->
-
+    -->
     </body>
 </html>
