--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <title>Home - Watchers</title>
     </head>
 
-    <body onload="redirect()">
+    <body>
         <header>
             <nav>
                 <ul id="Btn" class="Menu Menu_bar close">
